# nats-server

./: .fossa.yml  .gitignore  .gitlab-ci.yml  .golangci.yml  .goreleaser-night.yml  .goreleaser-nightly.yml  .goreleaser.yml  .travis.yml  AGENTS.md  AMBASSADORS.md  CHANGELOG.md  CHANGELOG_v1.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.all  Dockerfile.win64  GOVERNANCE.md  GPS.nuber.tell  HTTP_PROXY_IMPLEMENTATION.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASES.md  ROADMAP.md  TODO.md  all_mutations_diff.txt  auth.go  client.go  client_test.go  dependencies.md  errors.go  generate_diffs.sh  gnatsd.go  go.mod  go.sum  go_test.sum  locksordering.txt  (+31 more)
.buildkite/: pipeline.long-running.yml  shell.nix
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  Sponsor FUNDING.yml  pull.yml
IaC/: Nats.yml
auth/: dynamicuser.go  endpoint.go  jwt.go  multiuser.go  plain.go  token.go
conf/: conf.go  fuzz.go  lex.go  lex_test.go  parse.go  parse_test.go  simple.conf
doc/: README.md
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.final  Dockerfile.nightly  README.md  build.sh  nats-server.conf
etc/: cluster.conf  srv_a.conf
extension/: auth.go  permission.go  typeregistry.go
gwe-configuration/: Chart.yaml  values.yaml
hash/: hash.go  hash_test.go  results.txt
hashmap/: hashmap.go  hashmap_test.go  rand_evict.go  results.txt
health/: ALGORITHM.md  LICENSE  agent.go  aloc.go  btree.go  btree_test.go  config.go  health.go  health_test.go  (+5 more)
wasm/: Cargo.toml  callout.go  callout.wasm  transform.rs
(+990 files in other folders)
